Moved jTip images, also removed another un-needed function from jtip.js

--- a/src/jtip.css
+++ b/src/jtip.css
@@ -1,5 +1,5 @@
 #JT_arrow_left{
-	background-image: url(../images/arrow_left.gif);
+	background-image: url(arrow_left.gif);
 	background-repeat: no-repeat;
 	background-position: left top;
 	position: absolute;
@@ -11,7 +11,7 @@
 }
 
 #JT_arrow_right{
-	background-image: url(../images/arrow_right.gif);
+	background-image: url(arrow_right.gif);
 	background-repeat: no-repeat;
 	background-position: left top;
 	position: absolute;
@@ -34,7 +34,7 @@
 }
 
 .JT_loader{
-	background-image: url(../images/loader.gif);
+	background-image: url(loader.gif);
 	background-repeat: no-repeat;
 	background-position: center center;
 	width:100%;
