--- a/src/jtip.css
+++ b/src/jtip.css
@@ -24,7 +24,7 @@
 #JT {
 	position: absolute;
 	z-index:100;
-	border: 2px solid #CCCCCC;
+	border: 2px solid #960010;
 	background-color: #fff;
 }
 
@@ -42,7 +42,8 @@
 }
 
 #JT_close_left{
-	background-color: #CCCCCC;
+	background-color: #960010;
+	color: #FFF;
 	text-align: left;
 	padding-left: 8px;
 	padding-bottom: 5px;
@@ -51,7 +52,8 @@
 }
 
 #JT_close_right{
-	background-color: #CCCCCC;
+	background-color: #960010;
+	color: #FFF;
 	text-align: left;
 	padding-left: 8px;
 	padding-bottom: 5px;
@@ -65,7 +67,7 @@ margin:3px 0;
 
 #JT_copy img{
 	padding: 1px;
-	border: 1px solid #CCCCCC;
+	border: 1px solid #960010;
 }
 
 .jTip{
